--- a/indexinner.html
+++ b/indexinner.html
@@ -16,6 +16,7 @@
                 <div class="container-text">
                     <h1>Register</h1>
                     <p>Please fill in this form to register.</p>
+                    <p>Please Remember the Password for future use</p>
                 </div>
                 <hr>
                 <form id="registrationForm">
