--- a/indexinner.html
+++ b/indexinner.html
@@ -21,7 +21,7 @@
                 <hr>
                 <form id="registrationForm">
                 <input type="text" placeholder="Name" name="fname" id="name" required>
-                <input type="text" placeholder="Registration Number" id="regno" name="registration number" required style="text-transform:uppercase">
+                <input type="text" placeholder="Registration Number" id="regno" name="registration number" required>
                 <input type="email" placeholder=" VIT Email" name="email" id="email" required>
                 <input type="password" placeholder="Password" name="pass" id="pass" required minlength="6">
                 <input type="number" placeholder="Phone Number" name="pnumber" id="pno" required>
