--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
     <div class="hero-container">
       <h1>RECRUITMENT 2019-20</h1>
       <h2>IEEE-SSIT VIT STUDENT CHAPTER</h2>
-      <a href="indexinner.html" class="btn-get-started">REGISTER</a>
+      <a href="indexinner.html" class="btn-get-started">REGISTER</a><br>
+      <h4 style="color: beige;">11th Dec,2019 Wednesday</h4>
+      <h4 style="color: beige;">SJT 521/522 11:00am to 1:00pm</h4>
     </div>
   </section><!-- #hero -->
 
@@ -85,7 +87,7 @@
             <p class="section-description">Greetings from IEEE-SSIT family!</p>
             <p style="text-align:justify; color: rgb(0, 0, 0)">
                     Want to earn an opportunity to enhance your technical, managerial and designing skills? This is just the right place for you!
-                    We will be opening our doors for recruitments on <strong>11th December, 2019 [Wednesday] from 11:00 AM to 1:00 PM</strong>. 
+                    We will be opening our doors for recruitments on <strong>11th December, 2019 [Wednesday] from 11:00 AM to 1:00 PM @ SJT521/522</strong>. 
                     We are looking for Passionate, dedicated and hard working people to turn up for the auditions.
                     We hope that your selection takes you to new heights and streamlines and polishes your abilities and areas of interests.<br>
                     
