--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="#about">WHY US?</a></li>
           <li><a href="#portfolio">Domains</a></li>
           <!-- <li><a href="#team">Team</a></li> -->
-          <li><a href="results/results.html">Results</a></li>
+          <li><a href="results.html">Results</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -67,7 +67,7 @@
     <div class="hero-container">
       <h1>RECRUITMENT 2019-20</h1>
       <h2>IEEE-SSIT VIT STUDENT CHAPTER</h2>
-      <a href="results/results.html" class="btn-get-started">RESULTS</a><br>
+      <a href="results.html" class="btn-get-started">RESULTS</a><br>
       <!-- <h4 style="color: beige;">11th Dec,2019 Wednesday</h4>
       <h4 style="color: beige;">SJT 521/522 11:00am to 1:00pm</h4> -->
     </div>
