--- a/results.html
+++ b/results.html
@@ -85,8 +85,8 @@
           </div>
           <div class="divider-custom-line"></div>
         </div>
-        
-        <input type="text" class="form-control" id="myInput" placeholder="Registration number"><br>
+       
+        <input type="text" class="form-control" id="myInput" placeholder="Enter Your Registration Number"><br>
         <center><button class="btn text-center center-block" id="myBtn" onclick="myFunction()">Enter</button></center>
         <br>
         <h3 id="result"></h3>
